<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="commrhardman23.httpsgithub.pizzaselector.PizzaPreferences">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_section_title"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:textStyle="bold|italic"
            android:singleLine="false" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_one"
                android:id="@+id/chkboxPepperoni"
                android:layout_row="0"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_six"
                android:id="@+id/chkboxGreenPeppers"
                android:layout_row="0"
                android:layout_column="2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_two"
                android:id="@+id/chkboxHam"
                android:layout_row="1"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_seven"
                android:id="@+id/chkboxOnions"
                android:layout_row="1"
                android:layout_column="2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_three"
                android:id="@+id/chkboxBacon"
                android:layout_row="2"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_eight"
                android:id="@+id/chkboxOlives"
                android:layout_row="2"
                android:layout_column="2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_four"
                android:id="@+id/chkboxSausage"
                android:layout_row="3"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_nine"
                android:id="@+id/chkboxTomatoes"
                android:layout_row="3"
                android:layout_column="2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_five"
                android:id="@+id/chkboxMushrooms"
                android:layout_row="4"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topping_option_ten"
                android:id="@+id/chkboxExtraCheese"
                android:layout_row="4"
                android:layout_column="2" />
        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="175sp"
        android:layout_marginBottom="185sp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_section_title"
            android:id="@+id/txtvwSectionTwoTitle"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/app_text_size"
            android:textColor="#000000"
            android:textStyle="bold|italic" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="262dp"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_option_four"
                    android:id="@+id/rdobtnLarge"
                    android:layout_gravity="right"
                    android:layout_marginRight="35sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_option_one"
                    android:id="@+id/rdobtnIndividual"
                    android:layout_marginTop="-32sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_option_five"
                    android:id="@+id/rdobtnExtraLarge"
                    android:layout_gravity="right" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_option_two"
                    android:id="@+id/rdobtnSmall"
                    android:layout_marginTop="-32sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_option_three"
                    android:id="@+id/rdobtnMedium" />

            </RadioGroup>
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300sp"
        android:layout_marginBottom="50sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_section_title"
            android:id="@+id/txtvwSectionThreeTitle"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/app_text_size"
            android:textColor="#000000"
            android:textStyle="bold|italic" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:alignmentMode="alignBounds"
            android:columnOrderPreserved="false"
            android:clickable="false"
            android:rowOrderPreserved="false">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crust_option_two"
                    android:id="@+id/rdobtnThick"
                    android:layout_gravity="center_horizontal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crust_option_one"
                    android:id="@+id/rdobtnThin"
                    android:layout_marginTop="-32sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crust_option_three"
                    android:id="@+id/rdobtnCheeseFilled"
                    android:layout_gravity="right"
                    android:layout_marginTop="-32sp" />

            </RadioGroup>
        </GridLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="51dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/crust_option_four"
                android:id="@+id/chkboxGarlic"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button_title"
        android:id="@+id/btnCalculateCost"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="calculateCost" />
</RelativeLayout>
