<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="commrhardman23.httpsgithub.pizzaselector.CostCalculator">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost_title"
        android:id="@+id/txtvwCostTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:textSize="@dimen/cost_title_size" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtvwCostBreakdown"
        android:layout_below="@+id/txtvwCostTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:gravity="right"
        android:textColor="#484848"
        android:textSize="@dimen/costs_text_size"
        android:text="@string/cost_breakdown_template" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_button_title"
        android:id="@+id/button"
        android:layout_below="@+id/txtvwCostBreakdown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="backToMenu" />
</RelativeLayout>
